# gt-cs-rip-projects

./: .cproject  .project  ProjectHome.md
aStar/: CMakeLists.txt  README.txt  main.cpp
aStar/inc/: State.h
aStar/inc/ex2/: State.h
aStar/inp/: problem21.txt  problem24.txt
classical/: SokobanPlans.txt  SokobanResults.txt  hanoi-10.pddl  hanoi-6.pddl  project1.tex  sokoban-1.pddl  sokoban-2.pddl  sokoban-3.pddl  sokoban-4.pddl  sokoban-domain.pddl
final/: ProposalPresentation.ppt  RIPFinal.aux  RIPFinal.bbl  RIPFinal.bib  RIPFinal.tex  finalPresentation.odp  optimizedPass.ogv  plan3_resized.eps  plan4_resized.eps  refs.bib  robocupPass1-2.ogv  shotGoalAlone.ogv
motion/RST/GUI/: GUI.h  RSTFrame.cpp  RSTSlider.cpp  RSTimeSlice.cpp  TabView.h  Viewer.h
motion/RST/Tabs/: AllTabs.h  OptimizationTab.cpp  OptimizationTab.h  PlanningTab.cpp  TrajectoryTab.cpp  WalkPlanTab.h
motion/RST/Tools/: Optimizer.cpp  RRT.cpp  (+4 more)
motion/doc/: Project2Report.lyx  RTT_Stats.txt~  rrt_vs_birrt.eps
trunk/aStar/: A_Star.cpp  CMakeLists.txt  State.cpp  main.cpp
trunk/aStar/inc/: A_Star.h
trunk/aStar/inp/: problem22.txt  problem23.txt
trunk/classical/: hanoi-domain-alt.pddl  hanoi_plans.txt  project1.bib  project1.tex  sokoban-1.pddl  sokoban-2.pddl  sokoban-4.pddl  sokoban-domain.pddl
trunk/final/: ProposalPresentation.ppt  RIPFinal.aux  RIPFinal.bbl  RIPFinal.bib  RIPFinal.tex  finalPresentation.odp  gen_play.eps  nonoptimized_plan.eps  notOptimizedPass.ogv  optimized_plan.eps  plan2_resized.eps  plan5_resized.eps  refs.bib  ui.eps
trunk/motion/: Bidirectional_RRT_wins.txt
(+76 files in other folders)
